--- a/src/public/css/payment.css
+++ b/src/public/css/payment.css
@@ -115,22 +115,38 @@ h1 {
 }
 
 @media (min-width: 768px) and (max-width: 850px) {
+    .payment-container {
+        padding: 15px;
+        margin: 30px 10px;
+    }
+
     h1 {
         font-size: 28px;
-        line-height: 36px;
+        line-height: 1.3;
     }
 
     .item-details h2 {
         font-size: 24px;
+        line-height: 1.3;
     }
 
+    .item-price-symbol,
     .item-price-value {
-        font-size: 26px;
+        font-size: 24px;
+    }
+
+    .payment-method h3 {
+        font-size: 20px;
+    }
+
+    .payment-method p {
+        font-size: 18px;
     }
 
     .payment-btn,
     .back-btn {
+        max-width: 100%;
         font-size: 16px;
-        height: 48px;
+        padding: 10px;
     }
 }
